fixed alignmens

--- a/style.css
+++ b/style.css
@@ -14,7 +14,7 @@ body {
 	display: grid;
 	min-height: 100svh;
 	place-items: center;
-	background: linear-gradient(var(--Very-very-dark-blue), var(--Very-dark-blue), var(--Dark-desaturated-blue));
+	background: linear-gradient(var(--Very-very-dark-blue), var(--purply));
 }
 
 img {
@@ -33,6 +33,10 @@ img {
 	--Dark-desaturated-blue: hsl(236, 21%, 26%);
 	--Very-dark-blue: hsl(235, 16%, 14%);
 	--Very-very-dark-blue: hsl(234, 17%, 12%);
+
+	/* sky */
+	--purply: #2f2439;
+	--purply-v2: #352744;
 }
 
 .background {
@@ -44,22 +48,22 @@ img {
 }
 
 .stars path {
-	fill: white;
+	fill: rgba(255, 255, 255, 0.2);
 }
 
 .hills {
 	position: absolute;
 	bottom: 0;
-	width: 320%;
+	width: 370%;
 	height: 30%;
-	transform: translateX(-58%);
+	transform: translateX(-59%);
 }
 
 main {
 	display: grid;
-	border: 1px solid black;
-	width: 55%;
-	gap: 3rem;
+	width: 50%;
+	max-width: 700px;
+	gap: 4rem;
 	min-width: 340px;
 	transform: translateY(-70%);
 }
@@ -69,11 +73,11 @@ header {
 	text-align: center;
 	color: var(--White);
 	font-size: 1.3rem;
-	letter-spacing: 4px;
+	letter-spacing: 8px;
 }
 
 p {
-	font-size: 0.6rem;
+	font-size: 0.45rem;
 	letter-spacing: 3px;
 	color: var(--Grayish-blue);
 }
@@ -116,7 +120,7 @@ p {
 footer {
 	position: absolute;
 	display: flex;
-	gap: 2rem;
+	gap: 2.2rem;
 	bottom: 3rem;
 	left: 50%;
 	transform: translateX(-50%);
@@ -124,6 +128,7 @@ footer {
 
 footer svg {
 	cursor: pointer;
+	transform: scale(1.2);
 }
 
 footer svg:hover path {
@@ -141,7 +146,7 @@ footer svg:hover path {
 
 .top {
 	z-index: 1;
-	opacity: 0.5;
+	opacity: 0.65;
 	height: 49.5%;
 	transform-origin: center bottom;
 	border-top-right-radius: 0.25rem;
@@ -164,7 +169,7 @@ footer svg:hover path {
 	border-bottom-left-radius: 0.25rem;
 	border-bottom-right-radius: 0.25rem;
 	background-color: inherit;
-	box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.05);
+	box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.08);
 }
 
 .dots {
@@ -191,9 +196,34 @@ footer svg:hover path {
 
 .number {
 	position: absolute;
-	font-size: clamp(2rem, 5vw, 5rem);
+	font-size: clamp(2rem, 7vw, 6rem);
 	top: 50%;
 	left: 52%;
 	transform: translateX(-50%) translateY(-50%);
 	color: var(--Soft-red);
+}
+
+@media (min-width: 750px) {
+	p {
+		font-size: 0.6rem;
+	}
+}
+
+@media (min-width: 986px) {
+	main {
+		gap: 6rem;
+		transform: translateY(-60%);
+	}
+	.boxes-container {
+		gap: 1.5rem;
+	}
+	.hills {
+		width: 100%;
+		height: 25%;
+		transform: translateX(0%);
+	}
+	p {
+		font-size: 0.75rem;
+		letter-spacing: 4px;
+	}
 }
